  + Integration with Massive to provide a portable, simple graphic interface
  to MOSVM applications.

- ?/??/????, Brutal Scanner
  + Added (spawn-scanner), which starts a process which accepts commands to
    scan new hosts, and outputs gathered information.

- ?/??/????, MOSVM Installer
  * Add an install.ms script for unix users.
  * Add an install target for unix users.
  + Add the -mwindows flag for mosvm to prevent creating a console.
  + Add a mosvm.lnk for windows users.
  + Add a mosref.lnk for windows users.


- ?/??/????, Spawn Terminal
  * Added lib/terminal, a module that provides a way to spawn a new terminal
    in a variety of environments.
  * Added the *platform* global variable to core -- *platform* matches the
    MOSVM platform identifier for the current virtual machine.
  * Added the (close-listener listener) primitive.
  * Added lib/env, a module that provides convenient access to the environment
    variables found in *environ*
  * Modified bin/mosvm to use lib/terminal on win32 hosts.

- 6/25/2006, MOSREF Restoration
  * MOSREF now creates binaries for distribution again.
  * MOSREF employs bridges and endpoints, making it more flexible for adding
    new plugins.
  * Added lib/options, a library for constructing Common Lisp named arguments;
    slow but versatile.
  * Modified traceback to also permit tracing back into a string.
  * MOSREF now spawns an eval process on the drone, instead of doing a complete
    spawn every time it wants to eval.  The eval process sends feedback
    asynchronously to the drone, via the bridge.
  * Added lib/cons-filter
  * Added lib/format-filter

- 6/24/2006, Win32 Restoration
  * MOSVM now compiles and operates under win32, with the absence of *stdio*,
    and spawn-command.  Asynchronous I/O under win32 requires a considerable 
    amount of time and effort -- time that is not available to EphSec.
    
    For win32 developers with netcat installed in their PATH, the winrepl